# mydiscord

./: CMakeLists.txt  README.md  form_page.c  interface_message.c  log_page.c  main.c  pages.h  server.c  style.css
client/include/: connexion.h  global.h  interface_message.h  pages.h  salon.h
client/src/: azerfgh.c  connexion.c  form_page.c  interface_message.c  log_page.c  main.c  pages.c  salon.c
db/: schema.sql
server/: my_discord.sql
